# plagiarism-detection

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  app.py  dashboard.py  docker-compose.yml  plagiarism_detection.db  status.md  test.txt
app/: __init__.py  routes.py
app/static/css/: styles.css
app/templates/: base.html  index.html  results.html  upload.html
backend/: .env  .env.docker  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  routes.py  users.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  ai_detection.py  batch.py  comparison.py  document.py  user.py
backend/app/services/: ai_detection.py  batch_processing.py  comparison.py  embedding.py  parsing.py  storage.py
backend/migrations/: env.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AIDetectionPage.tsx  AdminPage.tsx  AuthProvider.tsx  BatchResultsPage.tsx  DashboardPage.tsx  ForgotPasswordPage.tsx  LandingPage.tsx  LoginPage.tsx  MainLayout.tsx  Navbar.tsx  ProtectedRoute.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  ResultsPage.tsx  UploadForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.tsx
frontend/srcsrc/: App.tsx
frontend/srcsrc/components/: UploadForm.tsx
infra/: docker-compose.yml
modules/: __init__.py  ai_detection.py  cv_module.py  db_operations.py  load_dataset.py  nlp_module.py  utils.py
tests/: test_ai_detection.py  test_cv_module.py  test_nlp_module.py
(+1 files in other folders)
