[tool.poetry]
name = "plagiarism-detection-backend"
version = "0.1.0"
description = ""
authors = ["Jules"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"
asyncpg = "^0.29.0"
celery = "^5.3.6"
redis = "^5.0.1"
python-multipart = "^0.0.6"
sentence-transformers = "^2.2.2"
"psycopg2-binary" = "^2.9.9"
pgvector = "^0.2.0"
boto3 = "^1.40.70"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
